5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1735_2521.log
== TEST (2019-05-10 21:08:27) 
-- CODE:
x=float(input("Digite um numero: "))
a=3
j=0
h=1
k=1
while(x>j):
	h=h*a
	z=(factorial(k))
	f=f+(z/h)
	a=a+3
	k=k+1
	j=j+1

o=2*f
o=round(o,10)
print(o)
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    z=(factorial(k))
NameError: name 'factorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:08:47) 
-- CODE:
from math import*
x=float(input("Digite um numero: "))
a=3
j=0
h=1
k=1
while(x>j):
	h=h*a
	z=(factorial(k))
	f=f+(z/h)
	a=a+3
	k=k+1
	j=j+1

o=2*f
o=round(o,10)
print(o)
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    f=f+(z/h)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:09:10) 
-- CODE:
from math import*
x=float(input("Digite um numero: "))
a=3
j=0
h=1
k=1
f=1
while(x>j):
	h=h*a
	z=(factorial(k))
	f=f+(z/h)
	a=a+3
	k=k+1
	j=j+1

o=2*f
o=round(o,10)
print(o)
	
	


-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:09:19) 
-- CODE:
from math import*
x=float(input("Digite um numero: "))
a=3
j=0
h=1
k=1
f=1
while(x>j):
	h=h*a
	z=(factorial(k))
	f=f+(z/h)
	a=a+3
	k=k+1
	j=j+1

o=2*f
o=round(o,10)
print(o)
	
	


-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 21:09:28) 
-- CODE:
from math import*
x=float(input("Digite um numero: "))
a=3
j=0
h=1
k=1
f=1
while(x>j):
	h=h*a
	z=(factorial(k))
	f=f+(z/h)
	a=a+3
	k=k+1
	j=j+1

o=2*f
o=round(o,10)
print(o)
	
	


-- EXECUTION TIME:
0.303268
-- TEST CASE 1:
---- input:
1560
---- correct output:
3.1415926536
---- user output:
3.0
-- TEST CASE 2:
---- input:
1000
---- correct output:
3.1415926536
---- user output:
3.0
-- TEST CASE 3:
---- input:
100
---- correct output:
3.1415926536
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:09:30) 
-- CODE:
from math import*
x=float(input("Digite um numero: "))
a=3
j=0
h=1
k=1
f=1
while(x>j):
	h=h*a
	z=(factorial(k))
	f=f+(z/h)
	a=a+3
	k=k+1
	j=j+1

o=2*f
o=round(o,10)
print(o)
	
	


-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 21:11:07) 
-- CODE:
from math import*
x=float(input("Digite um numero: "))
a=3
j=0
h=1
k=1
f=1
while(x>j):
	h=h*a
	z=(factorial(k))
	f=f+(z/h)
	a=a+2
	k=k+1
	j=j+1

o=2*f
o=round(o,10)
print(o)
	
	


-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 21:11:15) 
-- CODE:
from math import*
x=float(input("Digite um numero: "))
a=3
j=0
h=1
k=1
f=1
while(x>j):
	h=h*a
	z=(factorial(k))
	f=f+(z/h)
	a=a+2
	k=k+1
	j=j+1

o=2*f
o=round(o,10)
print(o)
	
	


-- EXECUTION TIME:
0.386214
-- TEST CASE 1:
---- input:
1560
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 2:
---- input:
1000
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 3:
---- input:
100
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 21:13:25) 
-- CODE:
from math import*
x=float(input("Digite um numero: "))
a=3
j=0
h=1
k=1
f=1
while(x>j):
	h=h*a
	z=(factorial(k))
	f=f+(z/h)
	a=a+2
	k=k+1
	j=j+1

o=2*f
o=round(o,10)
print(o)
	
	


-- EXECUTION TIME:
0.363607
-- TEST CASE 1:
---- input:
1560
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 2:
---- input:
1000
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 3:
---- input:
100
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
